# tin-snapshots

./: CHANGES  INSTALL  MANIFEST  Makefile  README  README.VMS  README.WIN  THOUGHTS  TODO  WHATSNEW  aclocal.m4  cfg-tin  conf-tin  config.guess  config.sub  configure.in  makefile.in  tinpp
amiga/: README  actived.c  amiga.c  amiga.h  amigatcp.c  amigatcp.h  parsdate.c  smakefile  tin-unoff.readme  tin.readme
doc/: CHANGES  CHANGES.old  DEBUG_REFS  Good-Netkeeping-Seal  HACKERS  HOWTOGET  INSTALL  README.PGP  TODO  WHATSNEW  attrib.txt  auth.txt  cmdref1.txt  cmdref2.txt  cmdref3.txt  cmdref4.txt  faq.html  faq.txt  filter.txt  filtering  forward.txt  good-netkeeping-seal  hashing.doc  internals.txt  intro.txt  iso2asc.txt  minimal-netkeeping  pgp.txt  procmail.txt  rcvars.txt  reading-mail.txt  son1036.txt  tin.1  tin.defaults  tin.lsm  tin.nrf  umlaute.txt  umlauts.txt
doc/german/: README  tin.1
include/: amiga.h  amigatcp.h  autoconf.hin  bool.h  bugrep.h  conf.h  config.h  extern.h  gst.h  menukeys.h  msmail.h  nntplib.h  os_2.h  patchlev.h  policy.h  proto.h  rfc1521.h  rfc1522.h  stpwatch.h  tcurses.h  tin.h  tinrc.h  tnntp.h  trace.h  version.h  win32.h  win32tcp.h
libcanlock/: Build  CHANGES  MANIFEST  README  base64.c  base64.h  canlock.h  canlock_md5.c  canlock_misc.c  canlock_sha1.c  canlocktest.c  endian.c  hmac_md5.c  hmac_md5.h  hmac_sha1.c  hmac_sha1.h  hmactest.c  md5.c  md5.h  sha1.c  sha1.h
libcanlock/doc/: HOWTO  draft-ietf-usefor-cancel-lock-01.txt  rfc2286.txt
misc/: scroll.dif
nntp/: INSTALL  README  patch.srv
old/: msmail.c  nntpvms.c  nntpw32.c  os_2.c  os_2.h  win32.c  win32.h  win32tcp.c  win32tcp.h
os2/: Makefile.bcc  Makefile.icc  README
pcre/: Makefile  Makefile.in  internal.h  pcre.c  pcre.mms
sio/: Makefile  README  Sprint.3  descrip.mms  events.h  impl.h  sio.3  sio.c  sio.h  sioconf.h  siosup.c  sprint.c
src/: Makefile  Makefile.in  active.c  actived.c  amiga.c  amigatcp.c  art.c  attrib.c  auth.c  charset.c  color.c  config.c  curses.c  debug.c  descrip.mms  envarg.c  feed.c  filter.c  getline.c  group.c  hashstr.c  header.c  help.c  ibm437_l1.tab  ibm850_l1.tab  inews.c  init.c  joinpath.c  l1_ibm437.tab  l1_ibm850.tab  l1_next.tab  lang.c  list.c  mail.c  main.c  makecfg.c  makefile.in  memory.c  misc.c  msmail.c  (+36 more)
tools/: expand_aliases.tgz  metamutt
vms/: cc-multinet.opt  decc-multinet.opt  decc-ucx.opt  descrip.mms  dir.h  gcc-multinet.opt  gcc-ucx.opt  getopt.c  getpass.c  isxterm.c  libvms.mms  make.com  makefile.  makevmslib.com  parsdate.c  parse.c  parse.h  qsort.c  select.h  strings.h  vms-multinet.opt  vms.c  vmsdir.c  vmsfile.c  vmspwd.c  vmstimval.h
win32/: README  parsdate.c  tin.mak
